# github-data

./: .env.template  .flake8  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Dockerfile  Makefile  README.md  REUSE.toml  TODO.md  conftest.py  docker-compose.test.yml  github_api_cache.sqlite  manual-test-repos.yml  pyproject.toml  pytest.ini
.claude/: settings.json
.claude/agents/: backup-restore-workflow.md  cohesion-refactoring.md  github-api-specialist.md  step-down-rule.md  testing-quality.md
.devcontainer/: Dockerfile  devcontainer.json
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: cd.yml  ci.yml  cleanup.yml
.gitlab/merge_request_templates/: Default.md
docker/: base.Dockerfile  git-base.Dockerfile  kit-orchestrator.Dockerfile
docker/test-environments/: README.md  docker-compose.test.yml  selective-large-range.env  selective-mixed.env  selective-restore.env  selective.env
docs/: claude.md  cli-generator-guide.md  github-token-setup.md  graphql-implementation.md  mockboundary-factory-patterns.md  rate-limiting.md  selective-operations-guide.md  testing-migration-troubleshooting.md  testing.md  using-claude.md
docs/architecture/: converter-registry.md  strategy-context.md
docs/claude-sessions/: 2025-01-08-development-infrastructure-setup.md  2025-09-07-initial-setup-complete.md  2025-09-07-license-github-recognition.md  2025-09-08-11-51-fix-pytest-warnings.md  2025-09-08-fix-json-storage-test.md  2025-09-08-integration-tests.md  2025-09-08-makefile-documentation.md  2025-09-08-rename-session-files.md  2025-09-08-type-error-fixes.md  2025-09-09-12-39-todo-update-and-commit.md  2025-09-09-14-30-quality-checks-and-todo-updates.md  2025-09-09-14-30-test-fixes.md  2025-09-09-16-30-error-handling-standardization.md  2025-09-09-17-45-fix-style-and-test-issues.md  2025-09-10-13-15-chronological-comment-ordering.md  2025-09-10-13-31-pull-request-filtering.md  2025-09-10-14-30-issue-comment-mapping.md  2025-09-10-14-30-label-conflict-strategies.md  2025-09-10-18-29-metadata-preservation-implementation.md  2025-09-10-21-23-todo-updates.md  2025-09-11-12-29-clean-code-boundary-refactor.md  2025-09-12-17-06-graphql-hybrid-implementation.md  2025-09-12-23-31-commit-push-session.md  2025-09-14-23-13-documentation-organization-token-setup.md  2025-09-15-12-10-fix-quality-checks.md  2025-09-16-14-10-graphql-paginator-phase3-completion.md  2025-09-16-19-15-data-enrichment-extraction-implementation.md  2025-09-16-23-21-graphql-boundary-refactoring.md  2025-09-16-23-52-rest-api-refactoring.md  2025-09-17-01-27-domain-model-enrichment-planning.md  2025-09-17-11-45-explicit-dependency-contracts-implementation.md
docs/development/: adding-entities.md
docs/planning/: 2025-01-11-21-30-test-fix-continuation.md  2025-09-07-20-44-dco-implementation.md  2025-09-08-18-52-github-client-refactor.md  2025-09-09-00-45-readme-development-status.md  2025-09-09-12-28-container-integration-testing-implementation.md  2025-09-12-12-06-cache-refactoring-global-approach.md  2025-09-19-21-30-entity-architecture-vision-comparison.md  2025-09-20-14-00-split-test-shared-fixtures-plan.md  2025-09-20-14-38-phase2-test-file-migration-plan.md  2025-09-20-15-00-phase3-enhanced-mock-fixtures-plan.md  2025-09-20-15-15-phase4-test-configuration-enhancement-plan.md  2025-09-21-01-51-test-framework-migration-plan.md  2025-09-21-15-15-phase5-test-configuration-enhancement-plan.md  2025-09-22-00-46-unit-test-modernization-analysis.md  2025-09-25-14-05-git-repository-backup-phase-1-implementation-plan.md  2025-09-27-15-30-selective-issues-prs-design.md  2025-09-28-14-30-include-issue-comments-env-var.md  2025-09-28-16-30-phase2-implementation-plan.md  2025-09-29-14-08-include-pull-request-comments-feature-analysis.md  2025-09-29-include-pull-request-comments-use-cases.md  2025-09-29-technical-debt-analysis-before-phase3.md  2025-09-30-16-00-comprehensive-technical-review-pull-request-comments-feature.md  2025-10-09-environment-variable-test-maintenance.md  2025-10-10-phase-2-implementation-plan.md  2025-10-10-phase-3-implementation-plan.md  2025-10-10-phase-3a-completion-summary.md  2025-10-10-phase-3a-implementation-plan.md  2025-10-11-16-08-test-fix-completion.md  2025-10-12-03-17-phase-2-completion-report.md  2025-10-12-03-18-phase-3-implementation-completion-report.md  2025-10-12-04-02-pr-reviews-comments-phase-1-completion-report.md  2025-10-12-14-45-phase-3-implementation-plan.md  2025-10-12-15-18-phase-3-implementation-results.md  2025-10-12-17-03-test-resilience-improvement-analysis.md  (+46 more)
github_data/: main.py
scripts/: migrate_docs_plans.py  organize_planning_docs.sh  organize_plans.sh  preview_sanitization.py  reuse  test-categories.py  test-changed.sh  test-containers  test-development.py
src/: conflict_strategies.py  github_client.py  main.py  models.py
tests/: conftest.py  test_conflict_strategies.py  test_container_integration.py  test_dependency_injection.py  test_docker_compose_integration.py  test_github_client.py  test_graphql_integration.py  test_integration.py  test_json_storage.py  test_main.py  test_metadata.py  test_pr_integration.py  test_pull_request_filtering.py  test_rate_limit_handling.py  test_sub_issues_integration.py
(+709 files in other folders)
