[project]
name = "github-data-workspace"
version = "2.0.0"
description = "Monorepo workspace for GitHub data management tools"
authors = [
    {name = "Stoney Jackson", email = "dr.stoney@gmail.com"},
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
keywords = ["github", "backup", "issues", "labels", "pull-requests", "data", "monorepo"]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.pdm]
distribution = false

[tool.pdm.workspace]
members = [
    "packages/core",
    "packages/git-repo-tools",
    "packages/github-repo-manager",
    "packages/github-data-tools",
    "packages/kit-orchestrator"
]

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.12.0",
    "pytest-timeout>=2.1.0",
    "black>=24.0.0",
    "flake8>=7.0.0",
    "mypy>=1.8.0",
    "types-requests>=2.31.0",
    "docker>=7.0.0",
    "psutil>=5.9.0",
    "pytest-asyncio>=1.2.0",
]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.git
  | \.venv
  | build
  | dist
)/
'''

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
follow_imports = "normal"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["packages/*/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
markers = [
    "unit: Unit tests (fast, isolated component tests)",
    "integration: Integration tests (component interaction tests)",
    "container: Container integration tests (full Docker workflow tests)",
    "fast: Fast-running tests (< 1s)",
    "medium: Medium-speed tests (1-10s)",
    "slow: Slow-running tests (> 10s)",
    "performance: Performance-critical tests",
    "save_workflow: Save workflow tests",
    "restore_workflow: Restore workflow tests",
    "github_api: GitHub API interaction tests",
    "storage: Storage operation tests",
    "error_handling: Error handling and resilience tests",
    "enhanced_fixtures: Tests using enhanced fixtures",
    "data_builders: Tests using data builder patterns",
    "error_simulation: Tests using error simulation",
    "workflow_services: Tests using workflow service fixtures",
    "empty_repository: Empty repository scenario tests",
    "large_dataset: Large dataset scenario tests",
    "rate_limiting: Rate limiting scenario tests",
    "api_errors: API error scenario tests",
]

[tool.coverage.run]
source = ["packages/*/src"]
omit = [
    "*/tests/*",
    "*/test_*.py",
    "*/__pycache__/*",
    "*/venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false

[tool.coverage.html]
directory = "coverage_html_report"
